--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,15 +1,54 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
+
+.button {
+  position: absolute;
+  width: 306px;
+  height: 191px;
+  /*left: 413px;
+  top: 1381px; */
+
+  background: #FFFFFF;
+  box-shadow: 0px 15px 40px #A2C3C7;
+  border-radius: 60px;
+}
+/* .Link {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 45px;
+  text-align: center;
+
+color: #7FA3C0;
+} */
+
 .App {
   text-align: center;
-  font-family: "Courier New", monospace;
+  font-family: 'Comfortaa', cursive;
+  background: #D7EDF0;
   width: 100%;
+  height: 100%
+}
+
+body {
+  text-align: center;
+  font-family: 'Comfortaa', cursive;
+  background: #D7EDF0;
+  width: 100%;
+  height: 100%
+}
+
+
+ul {
+  list-style-type: none;
 }
 
 h1 {
-  font-weight: normal;
+  font-weight: bold;
   font-size: 42px;
 }
 
-.passwords {
+/* .passwords {
   list-style: none;
   padding: 0;
   font-size: 32px;
@@ -18,7 +57,7 @@ h1 {
 
 .more {
   font-size: 32px;
-  font-family: "Courier New", monospace;
+  font-family: 'Comfortaa', cursive;
   border: 2px solid #000;
   background-color: #fff;
   padding: 10px 25px;
@@ -28,4 +67,4 @@ h1 {
 }
 .more:active {
   background-color: #FFEFA9;
-}
+} */
